# MapPolyAngle

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  eslint.config.js  improvement-ideas.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/terrain_splitter/: README.md  deploy_aws.sh  deploy_aws_staging.sh  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/terrain_splitter/scripts/: benchmark_partition_request.py  flight_time_playground.py
backend/terrain_splitter/terrain_splitter/: app.py  costs.py  dsm_store.py  dsm_uploads.py  exact_bridge.py  grid.py  mapbox_tiles.py  mission_optimizer.py  postprocess.py  schemas.py  solver_frontier.py  solver_graphcut.py
backend/terrain_splitter/tests/: test_costs_flight_time.py  test_dsm_backend.py  test_exact_bridge.py  test_mapbox_tiles_area_sequence.py  test_mission_optimizer.py  test_mission_optimizer_endpoint.py  test_solver_graphcut.py
backend/terrain_splitter/tests/fixtures/: example_dsm_23_5_cmpx_crop_512.tiff
public/sequence-dp/: index.html
scripts/: build-exact-runtime.mjs
src/components/: OverlapGSDPanel.tsx  PolygonParamsDialog.tsx
src/domain/: camera.ts  types.ts
src/flight/: flightLines.ts  geometry.ts  missionGeometry.ts  missionProfile.ts  missionProfile.worker.ts  missionProfileController.ts  missionProfileWorker.types.ts  plannedGeometry.ts  plannedGeometry.worker.ts  plannedGeometryController.ts  plannedGeometryWorker.types.ts  speeds.ts
src/overlap/: controller.ts  (+10 more)
(+67 files in other folders)
